--- a/src/elements/NewsItem.css
+++ b/src/elements/NewsItem.css
@@ -26,6 +26,10 @@
     font-size: 17px;
 }
 
+.headline {
+    transition: 0.3s ease
+}
+
 .news-data {
     background-color: rgba(52, 52, 52, 85%);
     border: 1px solid #ccc;
@@ -35,7 +39,7 @@
     z-index: 1000;
     position: fixed;
     max-width: 330px;
-    max-height: 330px;
+    max-height: 340px;
     font-size: 15px;
     pointer-events: none;
     /* Prevents the popup from interfering with mouse events */
@@ -47,6 +51,22 @@
     font-weight: 600;
     margin: 0 auto;
     text-align: center;
+    animation: glow 2s ease-in-out infinite;
+    text-shadow: 0 0 10px rgba(255, 76, 76, 0.1);
+}
+
+.positive-text {
+    color: #00ff15;
+}
+
+.neutral-text,
+.sentiment-not-available {
+    color: #eeff00;
+}
+
+.negative-text,
+.ai-disabled {
+    color: #ff1717;
 }
 
 /* Makes the news boxes appear like cards being dealt into a table */
@@ -64,5 +84,24 @@
         transform: translate(0, 0);
         opacity: 1;
         z-index: 0;
+    }
+}
+
+/* Makes the text glow like a neon sign */
+@keyframes glow {
+    0% {
+        color: #ff4c4c;
+        text-shadow: 0 0 5px rgba(255, 76, 76, 0.1);
+    }
+
+    50% {
+        color: #ff0000;
+        text-shadow: 0 0 15px rgba(255, 0, 0, 0.5),
+            0 0 25px rgba(255, 0, 0, 0.3);
+    }
+
+    100% {
+        color: #ff4c4c;
+        text-shadow: 0 0 5px rgba(255, 76, 76, 0.1);
     }
 }
